# tap-sqlalchemy

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
conf/: catalog.json  config-mssql.json  config-sqlite.json  config-template.json  logging.conf
conf/sql/: stream_mssql.sql
sql/: stream_sqlite.sql
src/: main.py  utils.py
src/tapstream/: CustomQueryTapStream.py  ReplicationMethod.py  __init__.py
tap_sqlalchemy/: logging.conf  main.py  utils.py
tap_sqlalchemy/tapstream/: CustomQueryTapStream.py  __init__.py
test/: command_test.sh  expect_stdout.txt  test_custom_query_sync.py  test_cutom_query_sync.py  test_db.db  testutils.py
test/resource/: config.json
test/test_conf/: catalog.json
yw_etl_tap_sqlalchemy/: logging.conf  main.py
yw_etl_tap_sqlalchemy/tapstream/: CustomQueryTapStream.py  helpers.py
yw_etl_tapsqlalchemy/: logging.conf  main.py
yw_etl_tapsqlalchemy/tapstream/: CustomQueryTapStream.py
