[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yw_etl_tapsqlalchemy"
version = '0.0.0'
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["yw_etl_tapsqlalchemy", "yw_etl_tapsqlalchemy.tapstream"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[project.scripts]
tap-sqlalchemy = "yw_etl_tapsqlalchemy.main:main"
